# hmarl

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: experiment.md  task.md
.github/workflows/: ci.yml
configs/: default.json
docs/: implementation-phases.md  project-map.md  research-proposal.md
env/: README.md
notebooks/: mvp_demo.ipynb  mvp_demo.py
scripts/: check.sh
src/: README.md
src/hmarl/: __init__.py  config.py
src/hmarl/agents/: __init__.py  base.py  policy.py
src/hmarl/forecasting/: __init__.py  baseline.py  naive.py
src/hmarl/sim/: __init__.py  env.py  scenario.py
src/hmarl/train/: rollout.py  run_episode.py
src/hmarl/utils/: __init__.py
tests/: test_config.py  test_env.py  test_forecasting.py  test_policy.py  test_rollout.py
